--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/msimile/node_exercises_develhope/issues"
   },
-  "homepage": "https://github.com/msimile/node_exercises_develhope#readme"
+  "homepage": "https://github.com/msimile/node_exercises_develhope#readme",
+  "devDependencies": {
+    "figlet": "^1.5.2"
+  }
 }
